Fix HTML formatting and update title text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <h1>Aptis B2 Master</h1>
+                <h1>Uptown Language Academy Aptis B2 training</h1>
                 <p id="app-subtitle">Selecciona una categoría para empezar</p>
             </div>
             
@@ -67,3 +67,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
